--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Tab Two
+        </ion-title>
+
+    </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content class="noScroll">
+    <div id="map"></div>
+</ion-content>
