--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,12 +1,16 @@
 <ion-header>
     <ion-toolbar>
         <ion-title>
-            Tab Two
+            Mapa
         </ion-title>
 
     </ion-toolbar>
 </ion-header>
 
 <ion-content class="noScroll">
-    <div id="map"></div>
+    <div id="map">
+
+
+    </div>
+
 </ion-content>
