Se agrego botón de 'cargar gpx' a tab2

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,7 +10,10 @@
 <ion-content class="noScroll">
     <div id="map">
 
-
     </div>
+    <div class='toggle-menu bottom'>
+        <label><button>CARGAR GPX</button></label>
+    </div>
+
 
 </ion-content>
