--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -2,7 +2,47 @@
     overflow: hidden;
 }
 
+label {
+    font-size: 30px;
+}
+
+.toggle-menu {
+    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    position: absolute;
+    width: 400px;
+    bottom: 10px;
+    right: 0;
+    padding: 10px;
+}
+
+.toggle-menu .toggle-menu-inner {
+    text-align: center;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.toggle-menu-inner button {
+    color: #000;
+    display: inline-block;
+    width: 50px;
+    height: 20px;
+    border: none;
+    margin: 10px;
+    cursor: pointer;
+}
+
 #map {
     height: 100%;
     width: 100%;
+}
+
+button {
+    position: absolute;
+    width: 120px;
+    height: 40px;
+    bottom: 9px;
+    border-radius: 30px;
+    background-color: #0ec7dd;
 }
