Se creo page cargar-gpx y enruto al botón del mapa

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -12,7 +12,7 @@
 
     </div>
     <div class='toggle-menu bottom'>
-        <label><button>CARGAR GPX</button></label>
+        <label><button (click)="goToCargar()">CARGAR GPX</button></label>
     </div>
 
 
