--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,7 +7,7 @@
         </ion-tab-button> -->
 
         <ion-tab-button tab="tab2">
-            <ion-icon name="apps"></ion-icon>
+            <ion-icon name="globe"></ion-icon>
             <ion-label>Mapa</ion-label>
         </ion-tab-button>
 
