Se agregó type='file' para seleccionar archivo

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -12,7 +12,11 @@
 
     </div>
     <div class='toggle-menu bottom'>
-        <label><button (click)="goToCargar()">CARGAR GPX</button></label>
+        <span class="mi-archivo">
+                <input type="file" name="mi-archivo" id="mi-archivo" hidden="none" />
+        </span>
+
+        <label for="mi-archivo"><span>CARGAR GPX</span></label>
     </div>
 
 
