--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -38,6 +38,30 @@ label {
     width: 100%;
 }
 
+input[type=”file”]#mi-archivo {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+label[for='mi-archivo'] {
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 30px;
+    color: #fff;
+    background-color: #106BA0;
+    display: inline-block;
+    transition: all .5s;
+    cursor: pointer;
+    padding: 15px 40px !important;
+    text-transform: uppercase;
+    width: fit-content;
+    text-align: center;
+}
+
 button {
     position: absolute;
     width: 120px;
